# settingsforge

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pydsettingsforge/: __init__.py  coercer.py  constants.py  env_reader.py  exceptions.py  merger.py  toml_reader.py  validator.py
src/settingsforge/: __init__.py  constants.py  env_reader.py  exceptions.py  toml_reader.py  validator.py
tests/: conftest.py  test_coercer.py  test_env_reader.py  test_load_settings.py  test_merger.py  test_toml_reader.py  test_validator.py
